product edit and delete endpoints implemented
